--- a/juno_ecommerce.ipynb
+++ b/juno_ecommerce.ipynb
@@ -1234,10 +1234,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "#### At this point the data has been loaded successfully into postgresql Juno_Ecommerce database for the use of stakeholders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
